# bug2_nav

./: CMakeLists.txt  README.md  package.xml  setup.py
bug2_nav/: attract.py  bug0_building_0.py  bug0_building_2.py  bug1_building_0.py  right_wall_following.py
bug2_nav/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
bug2_nav/log/: latest_build
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bug2_nav/lib/bug2_nav/: laser_scan
install/bug2_nav/share/bug2_nav/: package.dsv  package.ps1  package.sh  package.xml
launch/: building_0.launch.py  building_1.launch.py  building_2.launch.py  obstacle.launch.py  wall_world.launch.py
log/: latest_build
models/building_0/: model.config  model.sdf
models/building_1/: model.config  model.sdf
models/building_2/: model.config  model.sdf
models/maze/: model.sdf
models/wall/: model.sdf
worlds/: building_0.world  building_1.world  building_2.world  obstacle.world  wall.world
